--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <title>Contatos</title>
 </head>
 <body>
-    <h1>Contatos</h1>
+    <h1>Contact me</h1>
+    <a class="contact" href="mailto:yesterbrkn@gmail.com">On email</a>
 </body>
 </html>
