--- a/project.html
+++ b/project.html
@@ -9,5 +9,11 @@
 </head>
 <body>
     <h1>Projetos</h1>
+    <h2>Grid de preços</h2>
+    <div>
+        <h2>Join our community</h2>
+        <h3>30-day, hassie-free money back guarantee</h3>
+        <p>Gain access to our full library of tutorials along with expert code reviews.</p>
+    </div>
 </body>
 </html>
